Restructured base code, got key events working

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 
+
+<head>
+  <meta charset="utf-8">
+  <title>My Application</title>
+  <base href=".">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <i class="fas fa-chart-area"></i>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
 <body>
 <div class='page'>
   <span class='label'>ROM:</span>
@@ -21,4 +30,4 @@
   </div>
 </div>
 </body>
-<script src='nes.js'></script>
+<script src='./nes.js' type="module"></script>
