Added status to page, will clean up with CSS later

--- a/index.html
+++ b/index.html
@@ -27,15 +27,20 @@
     </div>
     <pre id="fileDisplayArea"></pre>
   </div>
+  <div class='container'>
+    <div class='memory'></div>
+    <div class='registers' id='pc'></div>
+    <div class='registers' id='sp'></div>
+    <div class='registers' id='x'></div>
+    <div class='registers' id='y'></div>
+    <div class='registers' id='a'></div>
+    <div class='registers' id='r2'></div>
+  </div>
   <div class='screen'>
     <canvas id='canvas' width='240' height='256'
       style='transform: scale(4); transform-origin: top left'></canvas>
   </div>
-  <div class='container'>
-    <div class='memory'></div>
-    <div class='registers' id='r1'></div>
-    <div class='registers' id='r2'></div>
-  </div>
+
 
 </div>
 </body>
